--- a/src/main/resources/templates/product_details/_information.html
+++ b/src/main/resources/templates/product_details/_information.html
@@ -29,9 +29,9 @@
                             <!-- Delete button -->
                             <button type="submit" value="&#xf014;"
                                     class="trans_200 fa product_text"
+                                    id="delete_product"
                                     style="font-size: 25px; color: #4a4a4a"
-                                    data-toggle="collapse"
-                                    onclick="confirmClick('Are you sure you want to delete?');">
+                                    data-toggle="collapse">
                                 &#xf014;
                             </button>
                         </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="tab-content-text">
-                                <h th:text="${product.getProductTypeName()}"></h>
+                                <h th:text="${product.getCategory()}"></h>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="tab-content-text">
-                                TODO
+                                <h th:text="${product.getCategory()}"></h>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="tab-content-text">
-                                <h th:text="${product.getPublishedYear()}"></h>
+                                <h th:text="${product.getSubcategory()}"></h>
                             </div>
                         </div>
                     </div>
@@ -962,7 +962,8 @@
                                     <div class="login-text p-b-10" style="color: black;">
                                         Category
                                     </div>
-                                    <select name="category" id="book_category_input"
+                                    <select name="category" id="book_category_input" th:field="*{category}"
+                                            th:value="${product.getCategory()}"
                                             class="dropdown_item_select checkout_input"
                                             required="required">
                                         <option>Literature</option>
@@ -974,7 +975,8 @@
                                     <div class="login-text p-b-10" style="color: black;">
                                         Subcategory
                                     </div>
-                                    <select name="subcategory" id="book_subcategory_input"
+                                    <select name="subcategory" id="book_subcategory_input" th:field="*{subcategory}"
+                                            th:value="${product.getSubcategory()}"
                                             class="dropdown_item_select checkout_input"
                                             required="required">
                                         <option>Novel</option>
@@ -1228,7 +1230,8 @@
                                     <div class="login-text p-b-10" style="color: black;">
                                         Category
                                     </div>
-                                    <select name="category" id="ebook_category_input"
+                                    <select name="category" id="ebook_category_input" th:field="*{category}"
+                                            th:value="${product.getCategory()}"
                                             class="dropdown_item_select checkout_input"
                                             required="required">
                                         <option>Literature</option>
@@ -1241,7 +1244,8 @@
                                         Subcategory
                                     </div>
                                     <select name="subcategory" id="ebook_subcategory_input"
-                                            class="dropdown_item_select checkout_input"
+                                            class="dropdown_item_select checkout_input" th:field="*{subcategory}"
+                                            th:value="${product.getSubcategory()}"
                                             required="required">
                                         <option>Novel</option>
                                         <option>Poet</option>
@@ -1434,7 +1438,8 @@
                                     <div class="login-text p-b-10" style="color: black;">
                                         Category
                                     </div>
-                                    <select name="category" id="audiobook_category_select"
+                                    <select name="category" id="audiobook_category_select" th:field="*{category}"
+                                            th:value="${product.getCategory()}"
                                             class="dropdown_item_select checkout_input"
                                             required="required">
                                         <option>Literature</option>
@@ -1447,7 +1452,8 @@
                                         Subcategory
                                     </div>
                                     <select name="subcategory" id="audiobook_subcategory_select"
-                                            class="dropdown_item_select checkout_input"
+                                            class="dropdown_item_select checkout_input" th:field="*{subcategory}"
+                                            th:value="${product.getSubcategory()}"
                                             required="required">
                                         <option>Novel</option>
                                         <option>Poet</option>
@@ -2174,9 +2180,6 @@
     /*<![CDATA[*/
     var productId = /*[[${product.getProductId()}]]*/ 'default';
     $('#update_book').click(function (event) {
-        var category = $('#book_category_input').val();     // TODO
-        var subcategory = $('#book_subcategory_input').val();     // TODO
-
         var ret = {
             productType: "book",
             buttonType: "update",
@@ -2198,6 +2201,8 @@
             height: $('#book_height_input').val(),
             width: $('#book_width_input').val(),
             depth: $('#book_depth_input').val(),
+            category: $('#book_category_input').val(),
+            subcategory: $('#book_subcategory_input').val(),
             lists: JSON.stringify({
                 publishers: $('#book_publisher_input').val().split(','),
                 translators: $('#book_translator_input').val().split(','),
@@ -2210,7 +2215,8 @@
             "book_published_year_input", "book_language_input", "book_translator_input", "book_authors_input", "book_isbn_input",
             "book_publisher_input", "book_keywords_input", "book_short_description_input", "book_long_description_input",
             "book_media_type_select", "book_paper_type_select", "book_binding_type_select", "book_page_number_input",
-            "book_edition_number_input", "book_height_input", "book_width_input", "book_depth_input"])) {
+            "book_edition_number_input", "book_height_input", "book_width_input", "book_depth_input", "book_category_input",
+            "book_subcategory_input"])) {
             event.preventDefault();
             $.post("/product-details/information/" + productId, ret, function (data) {
                 iziToast.show({
@@ -2236,9 +2242,6 @@
     });
 
     $('#update_ebook').click(function (event) {
-        var category = $('#ebook_category_input').val();     // TODO
-        var subcategory = $('#ebook_subcategory_input').val();     // TODO
-
         var ret = {
             productType: "ebook",
             buttonType: "update",
@@ -2255,6 +2258,8 @@
             pageNum: $('#ebook_page_number_input').val(),
             fileSize: $('#ebook_filesize_input').val(),
             fileFormat: $('#ebook_file_format_select').val().toUpperCase().split(" ").join("_"),
+            category: $('#ebook_category_input').val(),
+            subcategory: $('#ebook_subcategory_input').val(),
             lists: JSON.stringify({
                 publishers: $('#ebook_publisher_input').val().split(','),
                 translators: $('#ebook_translator_input').val().split(','),
@@ -2266,7 +2271,8 @@
         if (validation_check(["ebook_product_name_input", "ebook_product_barcode_input", "ebook_stock_input", "ebook_price_input",
             "ebook_published_year_input", "ebook_language_input", "ebook_translator_input", "ebook_authors_input", "ebook_isbn_input",
             "ebook_publisher_input", "ebook_keywords_input", "ebook_short_description_input", "ebook_long_description_input",
-            "ebook_page_number_input", "ebook_filesize_input", "ebook_file_format_select"])) {
+            "ebook_page_number_input", "ebook_filesize_input", "ebook_file_format_select", "ebook_category_input",
+            "ebook_subcategory_input"])) {
             event.preventDefault();
             $.post("/product-details/information/" + productId, ret, function (data) {
                 iziToast.show({
@@ -2292,9 +2298,6 @@
     });
 
     $('#update_audiobook').click(function (event) {
-        var category = $('#audiobook_category_select').val();     // TODO
-        var subcategory = $('#audiobook_subcategory_select').val();     // TODO
-
         var ret = {
             productType: "audio_book",
             buttonType: "update",
@@ -2310,6 +2313,8 @@
             longDesc: $('#audiobook_long_description_input').val(),
             lengthInMinutes: $('#audiobook_length_input').val(),
             narratedBy: $('#audiobook_narrator_input').val(),
+            category: $('#audiobook_category_select').val(),
+            subcategory: $('#audiobook_subcategory_select').val(),
             lists: JSON.stringify({
                 publishers: $('#audiobook_publisher_input').val().split(','),
                 translators: $('#audiobook_translator_input').val().split(','),
@@ -2321,7 +2326,8 @@
         if (validation_check(["audiobook_product_name_input", "audiobook_barcode_input", "audiobook_stock_input", "audiobook_price_input",
             "audiobook_published_year_input", "audiobook_language_input", "audiobook_language_input", "audiobook_translator_input",
             "audiobook_authors_input", "audiobook_isbn_input", "audiobook_publisher_input", "audiobook_keywords_input",
-            "audiobook_short_description_input", "audiobook_long_description_input", "audiobook_length_input", "audiobook_narrator_input"])) {
+            "audiobook_short_description_input", "audiobook_long_description_input", "audiobook_length_input", "audiobook_narrator_input",
+            "audiobook_category_select", "audiobook_subcategory_select"])) {
             event.preventDefault();
             $.post("/product-details/information/" + productId, ret, function (data) {
                 iziToast.show({
@@ -2347,7 +2353,6 @@
     });
 
     $('#update_ebook_reader').click(function (event) {
-
         var ret = {
             productType: "ebook_reader",
             buttonType: "update",
@@ -2414,7 +2419,6 @@
     });
 
     $('#update_ebook_reader_case').click(function (event) {
-
         var ret = {
             productType: "ebook_reader_case",
             buttonType: "update",
@@ -2466,7 +2470,6 @@
     });
 
     $('#update_book_case').click(function (event) {
-
         var ret = {
             productType: "book_case",
             buttonType: "update",
@@ -2510,6 +2513,40 @@
                     position: 'topRight',
                     color: 'red'
                 });
+            })
+        }
+    });
+
+    $('#delete_product').click(function (event) {
+        var ret = {
+            productType: "none",
+            buttonType: "delete",
+            productId: productId,
+            lists: JSON.stringify({})
+        };
+
+        if (confirm('Are you sure you want to delete?')) {
+            event.preventDefault();
+            $.post("/product-details/information/" + productId, ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Product deleted successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+                window.location.href = "/product-details/" + productId + "#information";
             })
         }
     });
