--- a/src/main/resources/templates/user_details/_information.html
+++ b/src/main/resources/templates/user_details/_information.html
@@ -320,7 +320,7 @@
                         color: 'red'
                     });
                 })
-            } else window.location.href = "/admin-panel#user";
+            } else window.location.href = "/user-details/" + userId + "#information";
 
         }
 
