delete operation fixed

--- a/src/main/resources/templates/user_details/_information.html
+++ b/src/main/resources/templates/user_details/_information.html
@@ -307,7 +307,7 @@
                         position: 'topRight',
                         color: 'green'
                     });
-                    window.location.href = "/admin-panel#user";
+                    window.location.href = "/admin-panel";
                     setTimeout(function () {
                         history.pushState(null, null, ' ');
                     }, 100);
