--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -81,7 +81,7 @@
                                         required="required">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -93,11 +93,10 @@
                                     Subcategory
                                 </div>
                                 <select name="subcategory" id="book_subcategory_input"
-                                        class="dropdown_item_select checkout_input"
-                                        required="required">
+                                        class="dropdown_item_select checkout_input">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -355,7 +354,7 @@
                                         required="required">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -367,11 +366,10 @@
                                     Subcategory
                                 </div>
                                 <select name="subcategory" id="ebook_subcategory_input"
-                                        class="dropdown_item_select checkout_input"
-                                        required="required">
+                                        class="dropdown_item_select checkout_input">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -574,7 +572,7 @@
                                         required="required">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -586,11 +584,10 @@
                                     Subcategory
                                 </div>
                                 <select name="subcategory" id="audiobook_subcategory_select"
-                                        class="dropdown_item_select checkout_input"
-                                        required="required">
+                                        class="dropdown_item_select checkout_input">
                                     <option value="">SELECT</option>
                                     <option th:each="category : ${categoryService.listAll()}"
-                                            th:value="${category}"
+                                            th:value="${category.getName()}"
                                             th:text="${category.getName()}">category
                                     </option>
                                 </select>
@@ -1513,7 +1510,7 @@
             "book_publisher_input", "book_keywords_input", "book_short_description_input", "book_long_description_input",
             "book_media_type_select", "book_paper_type_select", "book_binding_type_select", "book_page_number_input",
             "book_edition_number_input", "book_height_input", "book_width_input", "book_depth_input", "book_cover_image",
-            "book_category_input", "book_subcategory_input"])) {
+            "book_category_input"])) {
             event.preventDefault();
             $.post("/admin-panel/product", ret, function (data) {
                 iziToast.show({
@@ -1568,7 +1565,7 @@
             "ebook_published_year_input", "ebook_language_input", "ebook_translator_input", "ebook_authors_input", "ebook_isbn_input",
             "ebook_publisher_input", "ebook_keywords_input", "ebook_short_description_input", "ebook_long_description_input",
             "ebook_page_number_input", "ebook_filesize_input", "ebook_file_format_select", "ebook_cover_image",
-            "ebook_category_input", "ebook_subcategory_input"])) {
+            "ebook_category_input"])) {
             event.preventDefault();
             $.post("/admin-panel/product", ret, function (data) {
                 iziToast.show({
@@ -1622,7 +1619,7 @@
             "audiobook_published_year_input", "audiobook_language_input", "audiobook_language_input", "audiobook_translator_input",
             "audiobook_authors_input", "audiobook_isbn_input", "audiobook_publisher_input", "audiobook_keywords_input",
             "audiobook_short_description_input", "audiobook_long_description_input", "audiobook_length_input", "audiobook_narrator_input",
-            "audiobook_cover_image", "audiobook_category_select", "audiobook_subcategory_select"])) {
+            "audiobook_cover_image", "audiobook_category_select"])) {
             event.preventDefault();
             $.post("/admin-panel/product", ret, function (data) {
                 iziToast.show({
